[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-harpoon"
dynamic = ["version"]
description = "Opinionated wrapper around docker"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.8"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
keywords = [
    "docker",
]
dependencies = [
    "delfick_project==0.8.0",
    "docker==7.1.0",
    "humanize",
    "rainbow_logging_handler==2.2.2",
    "ruyaml==0.91.0",
]

[project.optional-dependencies]
tests = [
    "noseOfYeti[black]==2.4.8",
    "psutil==5.6.3",
    "pytest>=7.2.0",
]

[project.scripts]
harpoon = "harpoon.executor:main"

[project.urls]
Homepage = "https://github.com/delfick/harpoon"

[tool.hatch.version]
path = "harpoon/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/harpoon",
]

[tool.hatch.build.targets.wheel]
include = [
    "/harpoon",
]

[tool.black]
line-length = 100
include = '\.py$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools/\.python
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.*",
]

[tool.mypy]
plugins = 'noseOfYeti.plugins.mypy'
ignore_missing_imports = true
show_column_numbers = true
allow_redefinition = true
